--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 18px;
+}
+
 /* ======================= */
 /*        Header           */
 /* ======================= */
@@ -7,7 +11,7 @@
   max-height: 70px;
   z-index: 1100;
   width: 100%;
-  padding-top: 17px;
+  padding-top: 0.94rem;
   background: none;
   overflow: visible;
   -webkit-transition: all 0.3s;
@@ -19,7 +23,7 @@
 }
 @media only screen and (max-width: 766px) {
   .main_h {
-    padding-top: 25px;
+    padding-top: 1.39rem;
   }
 }
 
@@ -32,7 +36,7 @@
 
 .logo {
   width: 50px;
-  font-size: 25px;
+  font-size: 1.39rem;
   color: #666666;
   text-transform: uppercase;
   float: left;
@@ -102,7 +106,7 @@ nav ul li a {
   padding: 0.75rem 1rem;
   color: #333;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 0.78rem;
   text-transform: uppercase;
 }
 
@@ -196,12 +200,12 @@ nav ul li a {
   font-family: "Montserrat", sans-serif;
 }
 .hero h1 {
-  font-size: 50px;
+  font-size: 2.78rem;
   line-height: 1.3;
   padding: 10rem;
 }
 .hero h1 span {
-  font-size: 50px;
+  font-size: 2.78rem;
   color: #a4c2f4;
   border-bottom: 2px solid #a4c2f4;
   padding-bottom: 12px;
@@ -296,6 +300,7 @@ body {
   font-family: "Cardo", serif;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
+  font-size: 1rem;
 }
 
 a {
@@ -311,12 +316,12 @@ h1 {
 
 p {
   margin-bottom: 20px;
-  font-size: 17px;
+  font-size: 0.94rem;
   line-height: 2;
 }
 
 .content {
-  padding: 50px 2%;
+  padding: 2.78rem 2%;
 }
 
 strong {
